# terminal-AI-Agent-2

./: .gitignore  .tell_cache.json  .tellrc  LICENSE  Makefile  README.md  agent.py  agent.py.backup2  agent.py.bak  calculator.py  clear_cache.py  how-does-docker-ker-image-guide.md  install.ps1  install.sh  install_agent.sh  main.py  pyproject.toml  requirements.txt  run.sh  tell  tell.bat  verify_models.py
.github/workflows/: ci.yml
api/: __init__.py
commands/: __init__.py
config/: __init__.py
core/: __init__.py  __init__.py.bak2  __init__.py.bak3  analyzer.py  cache.py  command_history.py  prompts.py  utils.py
logger/: __init__.py
security/: __init__.py
tests/: test_analyzer.py  test_cache.py  test_commands.py  test_security.py
ui/: __init__.py  highlighter.py
