[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tell-agent"
version = "1.0.0"
description = "AI Terminal Assistant — coding agent and system helper"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests>=2.25",
]

[project.optional-dependencies]
monitoring = ["psutil>=5.8"]

[project.scripts]
tell = "main:main"

[tool.setuptools.packages.find]
where = ["."]
